--- a/_posts/2019-06-25-ldap.markdown
+++ b/_posts/2019-06-25-ldap.markdown
@@ -1,6 +1,6 @@
 ---
 published: true
-title: Keybaze mase
+title: LDAP nomenclature
 layout: post
 ---
 Recently I had to setup a local LDAP server.
